[project]
name = "truckle"
version = "0.1.4"
description = """\
    A simple setuptools alternative for packing Python modules \
    (with or without FFI bindings) into wheels."""
license = {text = "MIT"}
authors = [
    {name = "Wyatt Howe"},
    {email = "wyatt@brown.edu"}
]
readme = "README.rst"
requires-python = ">=3.7"

[project.urls]
Repository = "https://github.com/wyatt-howe/truckle"
Documentation = "https://truckle.readthedocs.io"

[project.optional-dependencies]
docs = [
    "toml~=0.10.2",
    "sphinx~=4.2.0",
    "sphinx-rtd-theme~=1.0.0"
]
test = [
    "pytest~=7.0",
    "pytest-cov~=3.0"
]
lint = [
    "pylint~=2.14.0"
]
coveralls = [
    "coveralls~=3.3.1"
]
publish = [
    "twine~=4.0"
]

[build-system]
requires = [
    "build~=0.8",
    "setuptools~=62.0",
    "wheel~=0.37"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=docs --cov=truckle --cov-report term-missing"
